--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>kr.co.kalpa.cms</groupId>
-  <artifactId>cms-mvc-lib</artifactId>
+  <artifactId>cms-mvc</artifactId>
   <version>1.0.0</version>
   <name>CmsMvcLib</name>
   <packaging>jar</packaging>
@@ -149,13 +149,18 @@
 <!--   			<version>4.0</version> -->
 <!-- 		</dependency> -->
 <!-- 	JUnit단위 테스트	 -->
+<!-- 	<dependency> -->
+<!-- 		<groupId>junit</groupId> -->
+<!-- 		<artifactId>junit</artifactId> -->
+<!-- 		<version>3.8.1</version> -->
+<!-- 		<scope>test</scope> -->
+<!-- 	</dependency> -->
+
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
-		<version>3.8.1</version>
-		<scope>test</scope>
+		<version>4.11</version>
 	</dependency>
-
 <!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -201,40 +206,21 @@
     
   </dependencies>
   <build>
-<!--     <finalName>CmsMvc-0.0.1</finalName> -->
-<!--     <plugins> -->
-<!--          <plugin> -->
-<!--             <groupId>org.apache.maven.plugins</groupId> -->
-<!--             <artifactId>maven-shade-plugin</artifactId> -->
-<!--             <executions> -->
-<!--                 <execution> -->
-<!--                     <phase>package</phase> -->
-<!--                     <goals> -->
-<!--                         <goal>shade</goal> -->
-<!--                     </goals> -->
-<!--                 </execution> -->
-<!--             </executions> -->
-<!--             <configuration> -->
-<!--                 <finalName>CmsMvc-0.0.1</finalName> -->
-<!--             </configuration> -->
-<!--         </plugin> -->
-<!-- </plugins> -->
-   <plugins>
-   <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <compilerArgument>-Xlint:all</compilerArgument>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
-                    <encoding>UTF-8</encoding>
-<!--                     <finalName>CmsMvc-0.0.2</finalName> -->
-                </configuration>
-            </plugin>
-            </plugins>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>2.3.2</version>
+			<configuration>
+				<source>1.6</source>
+				<target>1.6</target>
+				<compilerArgument>-Xlint:all</compilerArgument>
+				<showWarnings>true</showWarnings>
+				<showDeprecation>true</showDeprecation>
+				<encoding>UTF-8</encoding>
+			</configuration>
+		</plugin>
+	</plugins>
   </build>
 
 </project>
