--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>4.11</version>
+		<scope>test</scope>
 	</dependency>
 <!-- Logging -->
 		<dependency>
