--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,18 @@
 		<artifactId>commons-dbcp</artifactId>
 		<version>1.2.2</version>
 	</dependency>
+
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-compress</artifactId>
+		<version>1.8</version>
+	</dependency>
 	
+	<dependency>
+		<groupId>commons-codec</groupId>
+		<artifactId>commons-codec</artifactId>
+		<version>1.10</version>
+	</dependency>			
 	<!-- 		file upload -->
 	<dependency>
 		<groupId>commons-fileupload</groupId>
