--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,17 @@
 	  <version>1.0.0</version>
 	</dependency>
 			
-	<dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>servlet-api</artifactId>
-		<version>2.5</version>
-	</dependency>  
+<!-- 	<dependency> -->
+<!-- 		<groupId>javax.servlet</groupId> -->
+<!-- 		<artifactId>servlet-api</artifactId> -->
+<!-- 		<version>2.5</version> -->
+<!-- 	</dependency>   -->
+
+<dependency>
+	<groupId>javax.servlet</groupId>
+	<artifactId>javax.servlet-api</artifactId>
+	<version>3.1.0</version>
+</dependency>
 	
 	<dependency>
 		<groupId>javax.servlet</groupId>
